# Velo-for-Desktop

./: .gitignore  CLAUDE.md  README.md  update-list.md
MD/개발/: Windows 빌드·에러 보고 가이드.md  mDNS-우선-WiFi-Direct-보조-재설계.md  wifi_direct-cargo-check-에러-보고.md  windows-build-guide.md
desktop-app/: EULA.txt  index.html  package-lock.json  package.json
desktop-app/scripts/: download-cloudflared.sh
desktop-app/src/: App.tsx  constants.ts  deviceRegistration.ts  lib.ts  supabase.ts  types.ts  vite-env.d.ts
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: cloudflared.rs  compression_store.rs  folder_scanner.rs  lib.rs  mdns_advertiser.rs  mdns_discoverer.rs  sync_server.rs  sync_store.rs  wifi_direct.rs
desktop-app/src/components/: ActivationModal.tsx  BottomBar.tsx  DeviceConnectModal.tsx  DeviceManagerModal.tsx  FolderSidebar.tsx  Header.tsx  LegalModal.tsx  LicenseStatusModal.tsx  LoginModal.tsx  ReceivedFilesModal.tsx  SettingsPanel.tsx  Sidebar.tsx  Toast.tsx  WifiDirectPairModal.tsx
supabase/migrations/: 20260423020000_user_devices.sql
web/: index.html
web/public/: desktop-version.json  robots.txt  sitemap.xml
web/src/: i18n.ts
web/src/components/: DashboardLayout.tsx  LegalModal.tsx  LoginModal.tsx  SEO.tsx
web/src/design-test/: constants.tsx
web/src/design-test/components/: Footer.tsx  Hero.tsx  InterfaceShowcase.tsx  Navbar.tsx  PrivacySection.tsx
web/src/lib/: desktopRelease.ts
web/src/pages/: AdminPage.tsx  DeleteAccount.tsx  Home.tsx  MyPage.tsx  PrivacyPolicy.tsx
web/supabase/functions/check-free-quota/: index.ts
