[package]
name = "velo"
version = "1.0.1"
description = "Velo Desktop Application"
edition = "2021"

[lib]
name = "velo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-deep-link = "2.0"
trash = "5.1"
machine-uid = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 로컬 파일 수신용 HTTP 서버 — 폰이 LAN/Wi-Fi Direct로 파일 전송 시 받는 쪽.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "io-util"] }
local-ip-address = "0.6"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
