[package]
name = "velo"
version = "1.0.1"
description = "Velo Desktop Application"
edition = "2021"

[lib]
name = "velo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-deep-link = "2.0"
# SQLite — 받은 파일 메타데이터 기록 (content_hash, from_device, received_at...)
# cross-platform: mac/windows/linux 모두 동일 코드.
rusqlite = { version = "0.32", features = ["bundled"] }
trash = "5.1"
machine-uid = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 로컬 파일 수신용 HTTP 서버 — 폰이 LAN/Wi-Fi Direct로 파일 전송 시 받는 쪽.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "io-util"] }
local-ip-address = "0.6"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
# mDNS/Bonjour 광고 — 폰이 같은 LAN에서 "_velo._tcp" 서비스를 검색해 데스크탑 자동 발견
mdns-sd = "0.13"

# Wi-Fi Direct (Windows 전용) — Windows.Devices.WiFiDirect WinRT API 호출.
# macOS·Linux에서는 컴파일 자체 안 됨 → target_os 분기로 의존성 격리.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Devices_WiFiDirect",
    "Devices_Enumeration",
    "Foundation",
    "Foundation_Collections",
    "Networking_Connectivity",
    "Storage_Streams",
] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
